loginDialog: Prevent horizontal size expansions
Currently the password hint and the prompt message both expand the
dialog significantly. Reduce the allocated to the password hint, so it
can't do this anymore, and ellipsize the prompt message to the same
width as the password hint.

Of course, the trade-off is that this results in vertical expansion
instead, but that doesn't look nearly so bad.

Note that this commit adds a missing style class that can in theory be
used by the login dialog if the session worker wills it (but I have
never seen it used before). This is just to stay on the safe side....

[endlessm/eos-shell#5895]

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -2739,7 +2739,7 @@ StScrollBar StButton#vhandle:active {
 }
 
 .login-dialog-password-hint-label {
-    width: 40em;
+    width: 20em;
     color: #eeeeee;
     font-style: italic;
     font-size: 16px;
@@ -2839,8 +2839,13 @@ StScrollBar StButton#vhandle:active {
     background-color: rgba(102, 102, 102, 0.15);
 }
 
+.login-dialog-message-info {
+    width: 20em;
+}
+
 .login-dialog-message-warning {
     color: orange;
+    width: 20em;
 }
 
 .user-widget {
